force-app/main/default/objects/Data_Processing_Activity__c/Data_Processing_Activity__c.object-meta.xml
<CustomObject>
    <description>GDPR Article 30 - Records of Processing Activities (ROPA). Tracks data processing activities, legal basis, data categories, and retention periods.</description>
    <label>Data Processing Activity</label>
    <nameField>
        <displayFormat>DPA-{0000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Processing Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>