force-app/main/default/objects/Data_Processing_Activity__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <description>Name or description of the data processing activity</description>
    <label>Activity Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>