force-app/main/default/objects/Data_Processing_Activity__c/fields/Data_Categories__c.field-meta.xml
<CustomField>
    <fullName>Data_Categories__c</fullName>
    <description>Categories of personal data processed (e.g., Contact Info, Financial, Health, etc.)</description>
    <label>Data Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>