force-app/main/default/objects/Data_Processing_Activity__c/fields/Legal_Basis__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis__c</fullName>
    <description>Legal basis for processing under GDPR Article 6</description>
    <label>Legal Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Legal Obligation</fullName>
            </value>
            <value>
                <fullName>Vital Interests</fullName>
            </value>
            <value>
                <fullName>Public Task</fullName>
            </value>
            <value>
                <fullName>Legitimate Interests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>