force-app/main/default/objects/Data_Processing_Activity__c/fields/Retention_Period__c.field-meta.xml
<CustomField>
    <fullName>Retention_Period__c</fullName>
    <description>Data retention period in days</description>
    <label>Retention Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>