force-app/main/default/objects/Data_Processing_Activity__c/fields/Third_Parties__c.field-meta.xml
<CustomField>
    <fullName>Third_Parties__c</fullName>
    <description>List of third-party recipients or processors involved in this activity</description>
    <label>Third Parties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>